Update PlotGreetingListener.java
Signed-off-by: snazzyatoms <142071673+snazzyatoms@users.noreply.github.com>